[fix] - alignement font

--- a/src/styles/_expProMob.scss
+++ b/src/styles/_expProMob.scss
@@ -5,9 +5,14 @@
 
 .line-mob {
   width: 7px;
-  height: 225px;
+  height: 165px;
 }
 
 .exp-mob {
-  height: 226px;
+  height: 170px;
+}
+
+.margin-mob {
+  margin-top: -8px;
+  margin-left: 15px;
 }
